--- a/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
@@ -24,7 +24,29 @@ and open the template in the editor.
             padding: 0;
             margin: 0;
             
-            li {
+            li.expanded {
+                @include no-bullet;
+                border-bottom: 1px dotted $border-color;
+                background: lighten($border-color, 5%);
+                cursor: pointer;
+                
+                &:before {
+                    font-family: "FontAwesome";
+                    content: "\f0db";
+                    padding-right: $spacing;
+                }
+                
+                > a {
+                    font-weight: bold;
+                    @extend .zeta;
+                    
+                    &:hover {
+                        text-decoration: none;
+                    }
+                }
+            }
+            
+            li.leaf {
                 @include no-bullet;
                 padding-left: $vert-spacing-unit;
                 border-bottom: 1px dotted $border-color;
@@ -40,6 +62,7 @@ and open the template in the editor.
                         color: $white;
                     }
                 }
+                
                 &:before {
                     font-family: "FontAwesome";
                     content: "\f0da";
