--- a/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
+++ b/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
@@ -33,6 +33,10 @@ and open the template in the editor.
             a {
                 display: block;
                 border-right: 1px solid lighten($tab-menu-link-bgcolor, 5%);
+                
+                &:hover {
+                    text-decoration: none;
+                }
             }
 
             &:hover {
