--- a/sites/all/themes/gxnulib/sass/base/_forms.scss
+++ b/sites/all/themes/gxnulib/sass/base/_forms.scss
@@ -12,8 +12,16 @@ legend {
     color: $font-color;
 }
 
+select {
+    padding: $spacing $spacing * 2;
+    border: 1px solid $input-border-color;
+    @include transition(all 0.30s ease-in-out);
+    @include border-radius($radius);
+    outline: none;
+}
+
 input[type="text"], input[type="password"], textarea {
-    padding: $spacing $spacing*2;
+    padding: $spacing $spacing * 2;
     border: 1px solid $input-border-color;
     @include transition(all 0.30s ease-in-out);
     @include border-radius($radius);
@@ -41,5 +49,5 @@ input[type="submit"], input[type="button"]{
 }
 
 input[type="checkbox"], input[type="radio"] {
-    padding: $vert-spacing-unit $spacing;
+    padding: $spacing $spacing * 2;
 }
