--- a/sites/all/themes/gxnulib/sass/components/forms/_forms.scss
+++ b/sites/all/themes/gxnulib/sass/components/forms/_forms.scss
@@ -7,22 +7,40 @@ and open the template in the editor.
     Created on : Apr 16, 2015, 5:06:46 PM
     Author     : Stephen
 */
-
-/**
- * $FORM
- */
-.form-inline {
-    margin: 0;
-    padding: 0;
+.search-form-box {
+    padding: $vert-spacing-unit $spacing;
     
-    .form-item {
-        @include inline-block;
+    select {
+        margin: $spacing $spacing * 2;
     }
-}
+    
+    .checkbox, .radio {
+        display: inline-block;
+        margin: $spacing $spacing * 2;
+    }
 
-/**
- * $FORM-ITEM
- */
-.form-item {
-    display: inline;
+    input[type="text"] {
+        width: 85%;
+        height: 2.5em;
+        @include border-right-radius(0);
+    }
+    
+    input[type="submit"] {
+        width: 15%;
+        height: 2.5em;
+        @include border-left-radius(0);
+    }
+    
+    .intro {
+        padding: $spacing;
+        
+        ul {
+            padding: 0;
+            margin: 0;
+            
+            li {
+                display: inline-block;
+            }
+        }
+    }
 }
