--- a/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
@@ -32,7 +32,7 @@ and open the template in the editor.
                 
                 &:before {
                     font-family: "FontAwesome";
-                    content: "\f0db";
+                    content: "\f0d7";
                     padding-right: $spacing;
                 }
                 
