--- a/sites/all/themes/gxnulib/sass/components/forms/_forms.scss
+++ b/sites/all/themes/gxnulib/sass/components/forms/_forms.scss
@@ -16,7 +16,7 @@ and open the template in the editor.
     
     .checkbox, .radio {
         display: inline-block;
-        margin: $spacing $spacing * 2;
+        margin: $spacing;
     }
 
     input[type="text"] {
