添加views contextual filter or模块和修改glossary样式

--- a/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_navigation.scss
@@ -11,6 +11,7 @@ and open the template in the editor.
     .block--menu-block {
         border: 1px solid $border-color;
         @include border-radius($radius);
+        @include box-shadow(0 0 6px rgba($input-border-color, 0.7));
         
         .block__title {
             border-top: 3px solid $link-color;
