--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -147,6 +147,35 @@ ul li {
 img, media {
   max-width: 100%; }
 
+/* line 1, ../sass/base/_tables.scss */
+table {
+  background: #efede8; }
+  /* line 5, ../sass/base/_tables.scss */
+  table tr.odd {
+    background: #efede8; }
+  /* line 8, ../sass/base/_tables.scss */
+  table tr.even {
+    background: #ffffff; }
+  /* line 12, ../sass/base/_tables.scss */
+  table tr th {
+    background: #494f57;
+    padding: 0.5em; }
+    /* line 16, ../sass/base/_tables.scss */
+    table tr th a {
+      color: #ffffff; }
+      /* line 19, ../sass/base/_tables.scss */
+      table tr th a.active {
+        color: #ffffff; }
+      /* line 23, ../sass/base/_tables.scss */
+      table tr th a img {
+        margin-left: 0.5em; }
+  /* line 29, ../sass/base/_tables.scss */
+  table tr td {
+    padding: 0.5em; }
+    /* line 32, ../sass/base/_tables.scss */
+    table tr td.active {
+      background: transparent; }
+
 /**
  * $FONT-FACE
  */
@@ -676,17 +705,20 @@ and open the template in the editor.
   border: 1px solid #f0f0f0;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
-  border-radius: 4px; }
-  /* line 15, ../sass/components/menus/_navigation.scss */
+  border-radius: 4px;
+  -moz-box-shadow: 0 0 6px rgba(163, 163, 163, 0.7);
+  -webkit-box-shadow: 0 0 6px rgba(163, 163, 163, 0.7);
+  box-shadow: 0 0 6px rgba(163, 163, 163, 0.7); }
+  /* line 16, ../sass/components/menus/_navigation.scss */
   .l-region--sidebar-first .block--menu-block .block__title {
     border-top: 3px solid #922525;
     color: #922525;
     padding-left: 1.5em; }
-  /* line 21, ../sass/components/menus/_navigation.scss */
+  /* line 22, ../sass/components/menus/_navigation.scss */
   .l-region--sidebar-first .block--menu-block ul.menu {
     padding: 0;
     margin: 0; }
-    /* line 25, ../sass/components/menus/_navigation.scss */
+    /* line 26, ../sass/components/menus/_navigation.scss */
     .l-region--sidebar-first .block--menu-block ul.menu li.expanded {
       list-style-image: none;
       list-style-type: none;
@@ -694,18 +726,18 @@ and open the template in the editor.
       border-bottom: 1px dotted #f0f0f0;
       background: #fdfdfd;
       cursor: pointer; }
-      /* line 31, ../sass/components/menus/_navigation.scss */
+      /* line 32, ../sass/components/menus/_navigation.scss */
       .l-region--sidebar-first .block--menu-block ul.menu li.expanded:before {
         font-family: "FontAwesome";
         content: "\f0d7";
         padding-right: 0.5em; }
-      /* line 37, ../sass/components/menus/_navigation.scss */
+      /* line 38, ../sass/components/menus/_navigation.scss */
       .l-region--sidebar-first .block--menu-block ul.menu li.expanded > a {
         font-weight: bold; }
-        /* line 41, ../sass/components/menus/_navigation.scss */
+        /* line 42, ../sass/components/menus/_navigation.scss */
         .l-region--sidebar-first .block--menu-block ul.menu li.expanded > a:hover {
           text-decoration: none; }
-    /* line 47, ../sass/components/menus/_navigation.scss */
+    /* line 48, ../sass/components/menus/_navigation.scss */
     .l-region--sidebar-first .block--menu-block ul.menu li.leaf {
       list-style-image: none;
       list-style-type: none;
@@ -714,21 +746,21 @@ and open the template in the editor.
       border-bottom: 1px dotted #f0f0f0;
       background: #fdfdfd;
       cursor: pointer; }
-      /* line 55, ../sass/components/menus/_navigation.scss */
+      /* line 56, ../sass/components/menus/_navigation.scss */
       .l-region--sidebar-first .block--menu-block ul.menu li.leaf.active, .l-region--sidebar-first .block--menu-block ul.menu li.leaf.active:hover {
         background: #922525; }
-      /* line 59, ../sass/components/menus/_navigation.scss */
+      /* line 60, ../sass/components/menus/_navigation.scss */
       .l-region--sidebar-first .block--menu-block ul.menu li.leaf.active:before {
         color: #ffffff; }
-      /* line 64, ../sass/components/menus/_navigation.scss */
+      /* line 65, ../sass/components/menus/_navigation.scss */
       .l-region--sidebar-first .block--menu-block ul.menu li.leaf:before {
         font-family: "FontAwesome";
         content: "\f0da";
         padding-right: 0.5em; }
-      /* line 69, ../sass/components/menus/_navigation.scss */
+      /* line 70, ../sass/components/menus/_navigation.scss */
       .l-region--sidebar-first .block--menu-block ul.menu li.leaf:hover {
         background: #f0f0f0; }
-      /* line 73, ../sass/components/menus/_navigation.scss */
+      /* line 74, ../sass/components/menus/_navigation.scss */
       .l-region--sidebar-first .block--menu-block ul.menu li.leaf a {
         display: inline-block;
         vertical-align: middle;
@@ -736,10 +768,10 @@ and open the template in the editor.
         *zoom: 1;
         *display: inline;
         color: #333333; }
-        /* line 78, ../sass/components/menus/_navigation.scss */
+        /* line 79, ../sass/components/menus/_navigation.scss */
         .l-region--sidebar-first .block--menu-block ul.menu li.leaf a.active, .l-region--sidebar-first .block--menu-block ul.menu li.leaf a.active:before, .l-region--sidebar-first .block--menu-block ul.menu li.leaf a.active:hover {
           color: #ffffff; }
-        /* line 85, ../sass/components/menus/_navigation.scss */
+        /* line 86, ../sass/components/menus/_navigation.scss */
         .l-region--sidebar-first .block--menu-block ul.menu li.leaf a:hover {
           color: #922525;
           text-decoration: none; }
@@ -771,24 +803,25 @@ and open the template in the editor.
   border: 1px solid #f0f0f0;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
-  border-radius: 4px; }
-  /* line 14, ../sass/components/misc/_related-article.scss */
+  border-radius: 4px;
+  -moz-box-shadow: 0 0 6px rgba(163, 163, 163, 0.7);
+  -webkit-box-shadow: 0 0 6px rgba(163, 163, 163, 0.7);
+  box-shadow: 0 0 6px rgba(163, 163, 163, 0.7); }
+  /* line 15, ../sass/components/misc/_related-article.scss */
   .block--views-view-related-article-block .block__title {
     border-top: 3px solid #922525;
     color: #922525;
-    height: 3em;
-    line-height: 3em;
     padding-left: 1.5em; }
-  /* line 22, ../sass/components/misc/_related-article.scss */
+  /* line 21, ../sass/components/misc/_related-article.scss */
   .block--views-view-related-article-block ul {
     padding-left: 0; }
-    /* line 25, ../sass/components/misc/_related-article.scss */
+    /* line 24, ../sass/components/misc/_related-article.scss */
     .block--views-view-related-article-block ul li {
       padding-left: 1.5em; }
-      /* line 28, ../sass/components/misc/_related-article.scss */
+      /* line 27, ../sass/components/misc/_related-article.scss */
       .block--views-view-related-article-block ul li.views-row-odd {
         background: #ffffff; }
-      /* line 32, ../sass/components/misc/_related-article.scss */
+      /* line 31, ../sass/components/misc/_related-article.scss */
       .block--views-view-related-article-block ul li span.field-content:before {
         font-family: "FontAwesome";
         content: "\f101";
@@ -798,10 +831,10 @@ and open the template in the editor.
         *vertical-align: auto;
         *zoom: 1;
         *display: inline; }
-      /* line 39, ../sass/components/misc/_related-article.scss */
+      /* line 38, ../sass/components/misc/_related-article.scss */
       .block--views-view-related-article-block ul li a {
         color: #333333; }
-        /* line 42, ../sass/components/misc/_related-article.scss */
+        /* line 41, ../sass/components/misc/_related-article.scss */
         .block--views-view-related-article-block ul li a:hover {
           color: #922525; }
 
@@ -1045,7 +1078,7 @@ and open the template in the editor.
     background: #494f57;
     margin: 0 auto;
     padding: 0.5em 0;
-    width: 33.33333%;
+    width: 25%;
     text-align: center;
     float: left;
     display: inline-block;
@@ -1251,6 +1284,64 @@ and open the template in the editor.
 /* line 41, ../sass/components/tabs/_tab-icon.scss */
 #quicktabs-tab-resource_service_tabs-1:before {
   content: "\f0c1"; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : May 17, 2015, 9:53:08 PM
+    Author     : Stephen
+*/
+/* line 12, ../sass/components/views/_attachment.scss */
+.attachment .view-dbnav .view-content {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  padding-left: 0.5em; }
+  /* line 17, ../sass/components/views/_attachment.scss */
+  .attachment .view-dbnav .view-content .views-summary a {
+    padding: 0.5em; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : May 17, 2015, 9:39:08 PM
+    Author     : Stephen
+*/
+/* line 12, ../sass/components/views/_exposed-form.scss */
+.views-exposed-form .views-exposed-widget .views-widget {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline; }
+/* line 15, ../sass/components/views/_exposed-form.scss */
+.views-exposed-form .views-exposed-widget .form-text {
+  width: 20em; }
+/* line 18, ../sass/components/views/_exposed-form.scss */
+.views-exposed-form .views-exposed-widget .form-submit {
+  margin: 0; }
+
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : May 17, 2015, 10:02:05 PM
+    Author     : Stephen
+*/
+/* line 11, ../sass/components/views/_glossary.scss */
+.view-content .views-table {
+  width: 100%;
+  margin: 0.5em auto; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
