--- a/sites/all/themes/gxnulib/sass/variables/_colors.scss
+++ b/sites/all/themes/gxnulib/sass/variables/_colors.scss
@@ -11,6 +11,7 @@ $link-hover-color: darken($link-color, 15%);
 $link-active-color: $link-hover-color;
 $link-focus-color: $link-hover-color;
 $border-color: #f0f0f0;
+$footer-bgcolor: darken($bgcolor, 5%);
 
 $branding-bgcolor: #494f57;
 $branding-border-color: $link-color;
