--- a/sites/all/themes/gxnulib/sass/base/_typography.scss
+++ b/sites/all/themes/gxnulib/sass/base/_typography.scss
@@ -134,7 +134,7 @@ footer,
     padding: $vert-spacing-unit 0;
     margin: 0 auto;
     
-    background: darken($font-color, 10%);
+    background: $footer-bgcolor;
     
     text-align: center;
     color: lighten($font-color, 15%);
@@ -168,15 +168,14 @@ footer,
  * $COPYRIGHT
  */
 .l-copyright {
-    text-align: center;
     @include font-size(12px);
-    color: lighten($font-color, 15%);
+    color: $font-color;
     
     a {
         &,
         &:visited,
         &:hover {
-            color: lighten($font-color, 15%);            
+            color: $font-color;            
         }
     }
 }
